@@ -1,9 +1,29 @@
 {
-  "count": 1,
-  "uniques": 1,
+  "count": 5,
+  "uniques": 5,
   "clones": [
     {
-      "timestamp": "2025-09-27T00:00:00Z",
+      "timestamp": "2025-10-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-25T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-29T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-31T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-11-05T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
