@@ -1,3 +1,12 @@
+2025-11-06T00:59:47Z:
+* notice: GitHub Actions Run: https://github.com/andry81-builds/actions/actions/runs/19121273730 # 800
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-builds--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-06
+* notice: last 14d: unq all: 5 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 98 116 / 99 117
+* notice: next accum: outdated-unq outdated-all / unq all: 99 117 / 104 122
+* notice: prev exec diff / last date diff / accum: unq all: +5 +5 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-09-27] / [2025-10-24 2025-10-25 2025-10-29 2025-10-31 2025-11-05]
+
 2025-10-11T00:54:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81-builds/actions/actions/runs/18421941064 # 793
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-builds--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-11
